# montager

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  trial.xcf  try
g2/gimp-plugin-template-2.2.0/src/: main.c  render.c
gimp/: plugin  pp.c
rust/: Cargo.toml
rust/src/: main.rs  montage.rs
src/: annotate.rs  config.h  dist_queue.h  fd_layout.cpp  fd_layout.h  glue.rs  image.cpp  image.h  interface.cpp  interface.h  main.cpp  main.h  main.rs  montage.rs  pimage.cpp  pimage.h  pmontage.cpp  pmontage.h  poly_distance.rs  progress.h  render.cpp  render.h  test.cpp  types.cpp  types.h
