
#[[bin]]
#name = "mg_annot"
#path = "src/main.rs"


[package]
name = "montage-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
opencv = "0.68.0"
#clap = "4.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
#shape-core = "0.1.1"
